# sml-rs

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  check.sh  docs.sh  test_all_features.sh
.github/workflows/: quickstart.yml
examples/: decoder.rs  decoder_streaming.rs  serialport.rs
examples/embedded/esp32c3-power-meter-mock/: Cargo.toml  README.md
examples/embedded/esp32c3-power-meter-mock/src/: main.rs
examples/embedded/esp32c3-sml-reader/: Cargo.toml  README.md
examples/embedded/esp32c3-sml-reader-async/: Cargo.toml  README.md
examples/embedded/esp32c3-sml-reader-async/src/: main.rs
examples/embedded/esp32c3-sml-reader/src/: main.rs
examples/serialport/: Cargo.toml  serialport.rs
sml-rs-macros/: Cargo.toml  sml-rs-macros.rs
src/: lib.rs  num.rs  octet_string.rs  tlf.rs  transport.rs  transport2.rs  util.rs
src/application/: mod.rs
src/parser/: common.rs  complete.rs  domain.rs  gen.rs  mod.rs  num.rs  octet_string.rs  streaming.rs  tlf.rs
src/transport/: decode.rs  decoder_reader.rs  encode.rs  mod.rs
tests/: README.md  libsml-testing.rs
tests/libsml-testing-expected/: DrNeuhaus_SMARTY_ix-130.exp  EMH-ED300L_consumption.exp  EMH-ED300L_delivery.exp  EMH_eHZ-GW8E2A500AK2.exp  EMH_eHZ-HW8E2A5L0EK2P_1.exp  EMH_eHZ-HW8E2A5L0EK2P_2.exp  EMH_eHZ-HW8E2AWL0EK2P.exp  EMH_eHZ-IW8E2A5L0EK2P_with_error.exp  EMH_eHZ-IW8E2AWL0EK2P.exp  EMH_eHZ361L5R.exp  EMH_mME40-AE6AKF0K0.exp  EasyMeter_Q3A_A1064V1009.exp  HOLLEY_DTZ541-ZDBA.exp  ISKRA_MT175_D1A52-V22-K0t.exp  ISKRA_MT175_eHZ.exp  ISKRA_MT691_eHZ-MS2020.exp  ITRON_OpenWay-3.HZ.exp
tests/snapshots/: libsml_testing__app_layer@DZG_DVS-7412.2_jmberg.bin.snap  libsml_testing__app_layer@DZG_DVS-7412.2_jmberg.bin.snap.new  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr0.bin.snap  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr0.bin.snap.new  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr1.bin.snap  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr1.bin.snap.new  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr1_error.bin.snap  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr1_error.bin.snap.new  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr2.bin.snap  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr2.bin.snap.new  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr2_neg.bin.snap  libsml_testing__app_layer@DZG_DVS-7420.2V.G2_mtr2_neg.bin.snap.new  libsml_testing__app_layer@DrNeuhaus_SMARTY_ix-130.bin.snap  libsml_testing__app_layer@DrNeuhaus_SMARTY_ix-130.bin.snap.new  libsml_testing__app_layer@EMH-ED300L_consumption.bin.snap  libsml_testing__app_layer@EMH-ED300L_consumption.bin.snap.new  libsml_testing__app_layer@EMH-ED300L_delivery.bin.snap  libsml_testing__app_layer@EMH-ED300L_delivery.bin.snap.new  libsml_testing__app_layer@EMH_eHZ-GW8E2A500AK2.bin.snap  libsml_testing__app_layer@EMH_eHZ-GW8E2A500AK2.bin.snap.new  libsml_testing__app_layer@EMH_eHZ-HW8E2A5L0EK2P.bin.snap  libsml_testing__app_layer@EMH_eHZ-HW8E2A5L0EK2P.bin.snap.new  libsml_testing__app_layer@EMH_eHZ-HW8E2A5L0EK2P_1.bin.snap  libsml_testing__app_layer@EMH_eHZ-HW8E2A5L0EK2P_1.bin.snap.new  libsml_testing__app_layer@EMH_eHZ-HW8E2A5L0EK2P_2.bin.snap  libsml_testing__app_layer@EMH_eHZ-HW8E2A5L0EK2P_2.bin.snap.new  libsml_testing__app_layer@EMH_eHZ-HW8E2AWL0EK2P.bin.snap  libsml_testing__app_layer@EMH_eHZ-HW8E2AWL0EK2P.bin.snap.new  libsml_testing__app_layer@EMH_eHZ-IW8E2A5L0EK2P_with_error.bin.snap  libsml_testing__app_layer@EMH_eHZ-IW8E2A5L0EK2P_with_error.bin.snap.new  libsml_testing__app_layer@EMH_eHZ-IW8E2AWL0EK2P.bin.snap  libsml_testing__app_layer@EMH_eHZ-IW8E2AWL0EK2P.bin.snap.new  libsml_testing__app_layer@EMH_eHZ361L5R.bin.snap  libsml_testing__app_layer@EMH_eHZ361L5R.bin.snap.new  libsml_testing__app_layer@EMH_eHZ361L5R_1.bin.snap  libsml_testing__app_layer@EMH_eHZ361L5R_1.bin.snap.new  libsml_testing__app_layer@EMH_mME40-AE6AKF0K0.bin.snap  libsml_testing__app_layer@EMH_mME40-AE6AKF0K0.bin.snap.new  libsml_testing__app_layer@EasyMeter_Q3A_A1064V1009.bin.snap  libsml_testing__app_layer@EasyMeter_Q3A_A1064V1009.bin.snap.new  (+65 more)
