[package]
name = "sml-rs"
version = "0.2.1"
authors = ["Felix Wirth <felix@wirth.one>"]
description = "Smart Message Language (SML) parser written in Rust"
repository = "https://github.com/felixwrt/sml-rs"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
crc = "3.0.0"

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml", "glob"] }
hex-literal = "0.3.4"
hex = "0.4.3"

[package.metadata.docs.rs]
all-features = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[[example]]
name = "decoder"
path = "examples/decoder.rs"
required-features = ["alloc"]

[[example]]
name = "decoder-streaming"
path = "examples/decoder_streaming.rs"