[workspace]
members = [".", "examples/serialport"]

[package]
name = "sml-rs"
version = "0.4.0"
authors = ["Felix Wirth <felix@wirth.one>"]
description = "Smart Message Language (SML) parser written in Rust"
repository = "https://github.com/felixwrt/sml-rs"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
embedded_hal = ["nb", "embedded-hal"]

[dependencies]
crc = "3.0.0"
embedded-hal = { version = "0.2.7", optional = true }
nb = { version = "1.1.0", optional = true }

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml", "glob"] }
hex-literal = "0.4.1"
hex = "0.4.3"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[[example]]
name = "decoder"
path = "examples/decoder.rs"
required-features = ["std"]

[[example]]
name = "decoder-streaming"
path = "examples/decoder_streaming.rs"
required-features = ["std"]
