[workspace]
members = [".", "examples/serialport"]

[package]
name = "sml-rs"
version = "0.5.0-unreleased"
authors = ["Felix Wirth <me@felixwrt.dev>"]
description = "Smart Message Language (SML) parser written in Rust"
repository = "https://github.com/felixwrt/sml-rs"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
embedded-hal-02 = ["nb", "dep:embedded-hal-02"]
serde = ["dep:serde"]

[dependencies]
crc = "3"
embedded-hal-02 = { version = "0.2", package = "embedded-hal", optional = true }
nb = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1.21.0", features = ["yaml", "glob"] }
hex-literal = "0.4.1"
hex = "0.4.3"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[[example]]
name = "decoder"
path = "examples/decoder.rs"
required-features = ["std"]

[[example]]
name = "decoder-streaming"
path = "examples/decoder_streaming.rs"
required-features = ["std"]
