[package]
name = "esp32c3-sml-reader-async"
version = "0.1.0"
authors = ["Felix Wirth <me@felixwrt.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
embedded-io-async = "0.6.1"
esp-backtrace = { version = "0.12.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = ["embedded-io-async", "esp32c3", "async"] }
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "time-timg0"] }
esp-hal-smartled = { version = "0.11.0", features = ["esp32c3"], optional = true}
esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
smart-leds = { version = "0.4.0", optional = true }
sml-rs = { version = "0.4.0", default-features = false }

[features]
smart-led = ["dep:smart-leds", "dep:esp-hal-smartled"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
