[package]
name = "esp32c3-sml-reader"
version = "0.1.0"
authors = ["Felix Wirth <me@felixwrt.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
embedded-io = "0.6.1"
esp-backtrace = { version = "0.12.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = ["embedded-io", "esp32c3"] }
esp-hal-smartled = { version = "0.11.0", features = ["esp32c3"] }
esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
smart-leds = "0.4.0"
sml-rs = { version = "0.4.0", default-features = false }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[patch.crates-io]
# TODO: remove once https://github.com/esp-rs/esp-hal/pull/1702 is merged and released
esp-hal = { git = "https://github.com/felixwrt/esp-hal.git", rev = "c7bdd3519ace4e392b7c9f38d41c5cbc96f51bc8" }